force-app/main/default/objects/PostalPincode__c/PostalPincode__c.object-meta.xml
<CustomObject>
    <label>PostalPincode</label>
    <nameField>
        <label>PostalPincode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PostalPincodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>