force-app/main/default/objects/PostalPincode__c/fields/BranchType__c.field-meta.xml
<CustomField>
    <fullName>BranchType__c</fullName>
    <label>BranchType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>