force-app/main/default/objects/PostalPincode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Pincode__c</columns>
    <columns>Circle__c</columns>
    <columns>BranchType__c</columns>
    <columns>Block__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>